# item_rent

./: pyproject.toml  requirements.txt  schedules.txt
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
chattings/: admin.py  models.py
chattings/migrations/: 0001_initial.py  0002_initial.py
common/: models.py
config/: settings.py  urls.py
items/: admin.py  models.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_initial.py  0003_alter_item_description.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py
wishlists/: models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
